<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Socivy</string>
    <string name="string_socivy">Socivy</string>
    <string name="hello_world">Lol</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_info">Durak</string>
    <string name="title_activity_user">Ana Sayfa</string>
    <string name="string_mail">name@university.edu.tr</string>
    <string name="string_phone">Phone Number</string>
    <string name="string_name">Name Surname</string>
    <string name="string_pass">Password</string>
    <string name="string_login">Sign In</string>
    <string name="string_forgot">Forgot Your Password?</string>
    <string name="string_forgotpass">Reset Password</string>
    <string name="string_forgotdesc">If you have forgotten your password, enter your registered e-mail below and we will send you the necessary instructions to your e-mail for you to reset your password.</string>
    <string name="string_register">Register</string>
    <string name="string_join">Join</string>
    <string name="string_leave">Leave</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_add_route">Add Route</string>
    <string name="string_addroute">Add Route</string>
    <string name="string_findroute">Find Route</string>
    <string name="string_noroute">You haven\'t added any routes yet.</string>
    <string name="string_noavail">There is currently no available routes you can join.</string>
    <string name="string_noenroll">You have not enrolled to any routes yet.</string>
    <string name="title_section1">Have a Car</string>
    <string name="title_section2">Have No Car</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">IETT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_route">Route</string>
    <string name="title_activity_add_route_map">Add stop</string>
    <string name="string_toozu">From a Stop to ÖzÜ</string>
    <string name="string_tostop">From ÖzÜ to a Stop</string>
    <string name="string_vehicle">Enrolled Routes</string>
    <string name="string_available">Available Routes</string>
    <string name="string_routes">My Routes</string>
    <string name="string_update">Update Information</string>
    <string name="string_account">My Account</string>
    <string name="string_signout">Sign Out</string>
    <string name="string_today">Today</string>
    <string name="string_tomorrow">Tomorrow</string>
    <string name="string_choosestop">Choose Stops</string>
    <string name="string_addinfo">Additional Information</string>
    <string name="string_setoff">Hit the Road Jack!</string>
    <string name="string_addinfo2">License plate, car color, coffee etc.</string>
    <string name="string_done">Done</string>
    <string name="string_stops">Stops</string>
    <string name="string_participants">Participants</string>
    <string name="icon_heart">&#xf1db;</string>
    <string name="string_seat">Seats</string>
    <string name="string_contact">Contact</string>
    <string name="string_showtel">Show my phone number in the routes I have created</string>
    <string name="string_mysettings">My Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_pass">Forgot Password</string>
    <string name="title_activity_find_route">Find Route</string>

</resources>
