<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="2dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/socivylogo"
            android:contentDescription="@string/string_socivy" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:hint="@string/string_mail"
            android:inputType="textEmailAddress"
            android:background="@drawable/register_edittext"
            android:padding="10dp"
            android:textColorHint="#778BB0"
            android:textColor="#778BB0"
            android:textSize="12sp"
            android:drawableLeft="@drawable/email" />
        
        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:hint="@string/string_name"
            android:inputType="textPersonName"
            android:background="@drawable/register_edittext"
            android:layout_marginTop="2dp"
            android:padding="10dp"
            android:textColorHint="#778BB0"
            android:textColor="#778BB0"
            android:textSize="12sp"
            android:drawableLeft="@drawable/user" />

        <EditText
            android:id="@+id/editpass"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:hint="@string/string_pass"
            android:inputType="textPassword"
            android:background="@drawable/register_edittext"
            android:layout_marginTop="2dp"
            android:padding="10dp"
            android:textColorHint="#778BB0"
            android:textColor="#778BB0"
            android:textSize="12sp"
            android:drawableLeft="@drawable/password"  />
        
        <EditText
            android:id="@+id/editpass2"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:hint="@string/string_pass"
            android:inputType="textPassword"
            android:background="@drawable/register_edittext"
            android:layout_marginTop="2dp"
            android:padding="10dp"
            android:textColorHint="#778BB0"
            android:textColor="#778BB0"
            android:textSize="12sp"
            android:drawableLeft="@drawable/password"  />
        
        <EditText
            android:id="@+id/edittel"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:hint="@string/string_phone"
            android:inputType="phone"
            android:background="@drawable/register_edittext"
            android:layout_marginTop="2dp"
            android:padding="10dp"
            android:textColorHint="#778BB0"
            android:textColor="#778BB0"
            android:textSize="12sp"
            android:drawableLeft="@drawable/user" />

        <Button
            android:id="@+id/buttonregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/string_register"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>