<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listviewstyle"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_add_route"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <RadioGroup
                    android:id="@+id/testRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_radio"
                        android:button="@null"
                        android:checked="true"
                        android:text="@string/string_tostop"
                        android:textColor="@drawable/custom_radio_text" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_radio"
                        android:button="@null"
                        android:text="@string/string_toozu"
                        android:textColor="@drawable/custom_radio_text" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <RadioGroup
                    android:id="@+id/testRadioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@drawable/custom_radio"
                        android:button="@null"
                        android:checked="true"
                        android:text="@string/string_today"
                        android:textColor="@drawable/custom_radio_text" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@drawable/custom_radio"
                        android:button="@null"
                        android:text="@string/string_tomorrow"
                        android:textColor="@drawable/custom_radio_text" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/string_choosestop"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <Button
                    android:id="@+id/seatdec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="-"
                    android:textColor="#fff" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/listviewstyle"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/string_seat"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                		android:id="@+id/seattext"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:text="5"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <Button
                    android:id="@+id/seatinc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_button"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="+"
                    android:textColor="#fff" />
            </LinearLayout>

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listviewstyle"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_addinfo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/string_addinfo2"
                android:inputType="textMultiLine" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/buttonsetoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/string_setoff"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>